syntax = "proto3";

package api;

option go_package="github.azc.ext.hp.com/fitstation-hp/lib-fs-provider-go/examples/ping/server";

import "google/api/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_registration) = true;

service PingService {
    rpc Ping (PingRequest) returns (PingResponse) {
        option (google.api.http) = {
            get: "/ping"
        };
    }
}

message PingRequest {
    string in = 1;
}

message PingResponse {
    string out = 1;
}
